--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 			:root { color-scheme: light; }
 			body { font-family: 'Inter', sans-serif; }
 		</style>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-CC7HF59MSL"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-CC7HF59MSL');
+		</script>
 	</head>
 	<body class="bg-white text-slate-900">
 
