--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
 					<div class="border-t border-slate-700 pt-12 md:pt-16">
 						<p class="text-sm md:text-base text-slate-200 leading-relaxed mb-6 md:mb-8">Fale com a gente. Estamos conversando com todo mundo que pode fazer parte dessa construção.</p>
-						<a href="mailto:tvwsbr@gmail.com" class="text-xl md:text-2xl lg:text-3xl font-display font-light hover:opacity-80 transition">tvwsbr@gmail.com</a>
+						<a href="mailto:contato@tvws.com.br" class="text-xl md:text-2xl lg:text-3xl font-display font-light hover:opacity-80 transition">contato@tvws.com.br</a>
 					</div>
 				</div>
 			</div>
